# raspquery-reco

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  fly.toml  pyproject.toml  railway.toml
app/: __init__.py  main.py
app/api/: schemas.py
app/api/routes/: health.py  recommend.py
app/core/: config.py  constants.py  models.py
app/domain/: analyzed_query.py  catalog_filter.py  query_fallback.py  redundancy.py  task_graph.py
app/infra/: embeddings.py  supabase.py
app/infra/llm/: __init__.py  cerebras.py  client.py  coerce.py  groq.py  parse.py  retry.py  schema.py
app/pipeline/: dry_run.py  errors.py  matcher.py  orchestrator.py  query_analyzer.py  retrieval_pool.py  retrieval_text.py  role_copy.py  stack_builder.py  stack_validation.py
app/pipeline/fallbacks/: enrichment.py  selection.py
data/: catalog-filter.json
docs/: CEREBRAS_429.md  DEPLOY.md
scripts/: PHASE0.md  analyze_query.py  check_env.py  compare_ts_py.py  compare_ts_py_report.json  debug_llm.py  phase0_report.json  phase0_scenarios.json  phase0_validate.py  run_orchestrator.py
tests/: test_analyzed_query.py  test_catalog_filter.py  test_groq_schema.py  test_llm_coerce.py  test_llm_retry.py  test_matcher.py  test_matcher_dependencies.py  test_parse_repair.py  test_retrieval_pool.py  test_retrieval_text.py  test_role_copy.py  test_stack_validation.py
